# GSM

./: .main.cpp.kate-swp  CMakeLists.txt  main.cpp
.kdev4/: Hello.kdev4
debug/: hello
include/SQLiteCpp/: Assertion.h  Backup.h  Column.h  Database.h  Exception.h  SQLiteCpp.h  Statement.h  Transaction.h
src/: Column.cpp  Database.cpp  Statement.cpp  Transaction.cpp  client.cpp  client.hpp  config.cpp  config.h  main.cpp
